[project]
name = "news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "google-genai>=2.0.1",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "slack-bolt>=1.28.0",
    "uvicorn>=0.46.0",
]
